--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,43 +1,17 @@
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url('/fonts/Inter-Regular.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url('/fonts/Inter-Bold.woff2') format('woff2');
-}
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 @layer base {
   html {
     @apply bg-gray-50 font-sans antialiased;
   }
 
-  h1 {
-    @apply text-2xl font-bold;
-  }
-
   h2 {
     @apply pt-4 text-xl font-bold;
-  }
-
-  h3 {
-    @apply text-lg font-bold;
   }
 }
 
 @layer components {
   .content ul {
-    @apply list-disc pl-4 mb-4;
+    @apply list-disc;
   }
 }
